fix some resume special state colors in dark mode

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -4,6 +4,10 @@
   padding: 7rem 1rem 3rem 1rem;
 }
 
+.main.darkMode ::selection {
+  background-color: var(--dark-selection-color);
+}
+
 .h2 {
   cursor: default;
   font-size: 36px;
